# imker

./: .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
example/: 0.basic_usage.ipynb  1.text_classification_with_transformers.ipynb
example/tabular/: 0.basic_usage_train.ipynb
src/imker/: __init__.py  inspection.py  types.py  utils.py
src/imker/adapter/lightning/: __init__.py  base.py  dataloader.py  task.py
src/imker/component/: base.py
src/imker/container/: base.py
src/imker/pipeline/: pipeline.py
src/imker/store/: cacher.py  viewer.py
src/imker/task/: base.py  config.py  task.py
